--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.15.2",
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.1.0",
+    "tether": "^1.4.0",
     "laravel-mix": "^0.6.0",
     "lodash": "^4.16.2",
     "vue": "^2.0.1"
