--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "axios": "^0.15.2",
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.1.0",
-    "tether": "^1.4.0",
     "laravel-mix": "^0.6.0",
     "lodash": "^4.16.2",
-    "vue": "^2.0.1"
+    "tether": "^1.4.0",
+    "vue": "^2.0.1",
+    "webpack-dev-server": "^2.2.0-rc.0"
   },
   "dependencies": {
-    "pace": "0.0.4"
+    "pace": "0.0.4",
+    "videogular": "^2.0.1"
   }
 }
