--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.3",
+        "buggedcom/phpvideotoolkit": "^2.2",
         "doctrine/dbal": "^2.5",
         "egeloen/google-map": "^2.0",
         "egeloen/serializer": "^1.0",
