--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,10 @@
 {
+  "/js/app/2.1/script.js": "/js/app/2.1/script.js",
   "/js/app.js": "/js/app.js",
-  "/css/app/2.1/style.css": "/css/app/2.1/style.css",
+  "/css/app/2.1/video-js.css": "/css/app/2.1/video-js.css",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
   "/css/app/2.1/dropzone.css": "/css/app/2.1/dropzone.css",
   "/css/app.css": "/css/app.css",
-  "/js/app/2.1/script.js": "/js/app/2.1/script.js",
   "/js/city.js": "/js/city.js"
 }
