--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular": "*",
     "angular-media-timeline": "*",
     "dropzone": "*",
+    "fabric": "^2.0.0-beta.6",
     "mo-js": "*",
     "pace": "0.0.4",
     "video.js": "*",
