--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "production": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.16.2",
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.1.0",
     "laravel-mix": "^0.10.0",
     "lodash": "^4.16.2",
     "tether": "^1.4.0",
-    "vue": "^2.0.1",
-    "webpack-dev-server": "^2.2.0-rc.0"
+    "vue": "^2.4.2",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "angular": "*",
+    "angular": "^1.6.6",
     "angular-media-timeline": "*",
-    "dropzone": "*",
-    "fabric": "^2.0.0-beta.6",
+    "dropzone": "^5.1.1",
+    "fabric": "^2.0.0-beta0",
     "mo-js": "*",
     "pace": "0.0.4",
-    "video.js": "*",
+    "video.js": "^6.2.6",
     "vjs-video": "*"
   }
 }
