--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+  "/js/app/sound-studio.js": "/js/app/sound-studio.js",
   "/js/app/intercut-crosscutting.js": "/js/app/intercut-crosscutting.js",
   "/js/app.js": "/js/app.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
