--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.3.0",
         "mews/purifier": "^2.0",
-        "php-ffmpeg/php-ffmpeg": "^0.9.3"
+        "php-ffmpeg/php-ffmpeg": "^0.9.3",
+        "rairlie/laravel-locking-session": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
