--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
   },
   "devDependencies": {
     "axios": "^0.16.2",
+    "babel": "~6.1.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-runtime": "~6.1.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "~6.1.0",
+    "babel-preset-react": "~6.1.0",
+    "babel-preset-stage-0": "~6.1.0",
+    "babel-runtime": "~6.2.0",
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.1.0",
     "laravel-mix": "^0.10.0",
