--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.3.0",
+        "maatwebsite/excel": "^2.1",
         "mews/purifier": "^2.0",
         "php-ffmpeg/php-ffmpeg": "^0.9.3",
         "rairlie/laravel-locking-session": "^1.0"
