New admin panel with Vue and alerts on first visit

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
   "/js/admin/video.js": "/js/admin/video.js",
   "/js/admin/audio.js": "/js/admin/audio.js",
   "/js/app.js": "/js/app.js",
+  "/js/admin/main.js": "/js/admin/main.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
