--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
   "/js/app/sound-studio.js": "/js/app/sound-studio.js",
   "/js/app/intercut-crosscutting.js": "/js/app/intercut-crosscutting.js",
   "/js/admin/video.js": "/js/admin/video.js",
+  "/js/admin/image.js": "/js/admin/image.js",
   "/js/admin/audio.js": "/js/admin/audio.js",
   "/js/admin/main.js": "/js/admin/main.js",
   "/js/app.js": "/js/app.js",
