--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "maatwebsite/excel": "^2.1",
         "mews/purifier": "^2.0",
         "pragmarx/tracker": "^3.2",
+        "predis/predis": "^1.1",
         "rairlie/laravel-locking-session": "^1.0",
         "spatie/laravel-activitylog": "*",
         "teamtnt/laravel-scout-tntsearch-driver": "^3.0",
