--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-runtime": "~6.2.0",
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.1.0",
+    "laravel-echo": "^1.3.2",
     "laravel-mix": "^0.10.0",
     "lodash": "^4.16.2",
     "mojs-curve-editor": "^1.5.0",
