--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "express": "^4.16.2",
     "fabric": "^2.0.0-beta0",
     "font-awesome": "^4.7.0",
+    "ioredis": "^3.1.4",
     "mo-js": "*",
     "redis": "^2.8.0",
     "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "video.js": "^6.2.6",
     "vjs-video": "*",
     "vue": "^2.4.4",
