--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
   "/js/app/sound-studio.js": "/js/app/sound-studio.js",
   "/js/app/intercut-crosscutting.js": "/js/app/intercut-crosscutting.js",
+  "/js/teacher-chat.js": "/js/teacher-chat.js",
   "/js/socket-test.js": "/js/socket-test.js",
   "/js/admin/video.js": "/js/admin/video.js",
   "/js/admin/image.js": "/js/admin/image.js",
