--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,12 +3,13 @@
   "/js/app/intercut-crosscutting.js": "/js/app/intercut-crosscutting.js",
   "/js/socket-test.js": "/js/socket-test.js",
   "/js/teacher-chat.js": "/js/teacher-chat.js",
+  "/js/network-single.js": "/js/network-single.js",
   "/js/admin/video.js": "/js/admin/video.js",
   "/js/admin/image.js": "/js/admin/image.js",
   "/js/admin/audio.js": "/js/admin/audio.js",
   "/js/admin/main.js": "/js/admin/main.js",
-  "/js/app.js": "/js/app.js",
   "/js/network.js": "/js/network.js",
+  "/js/app.js": "/js/app.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
