--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -10,6 +10,7 @@
   "/js/admin/main.js": "/js/admin/main.js",
   "/js/network.js": "/js/network.js",
   "/js/app.js": "/js/app.js",
+  "/js/app/studio-home.js": "/js/app/studio-home.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
