--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -17,6 +17,7 @@
   "/css/app/2.1/dropzone.css": "/css/app/2.1/dropzone.css",
   "/css/app.css": "/css/app.css",
   "/css/admin/admin.css": "/css/admin/admin.css",
+  "/js/admin/translate.js": "/js/admin/translate.js",
   "/js/vendor.js": "/js/vendor.js",
   "/js/city.js": "/js/city.js",
   "/js/conference/speakers.js": "/js/conference/speakers.js",
