--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
   "/js/socket-test.js": "/js/socket-test.js",
   "/js/teacher-chat.js": "/js/teacher-chat.js",
   "/js/network-single.js": "/js/network-single.js",
+  "/js/admin/translate.js": "/js/admin/translate.js",
   "/js/admin/video.js": "/js/admin/video.js",
   "/js/admin/image.js": "/js/admin/image.js",
   "/js/admin/audio.js": "/js/admin/audio.js",
@@ -11,13 +12,13 @@
   "/js/app/studio-home.js": "/js/app/studio-home.js",
   "/js/network.js": "/js/network.js",
   "/js/app.js": "/js/app.js",
+  "/js/admin/keywords.js": "/js/admin/keywords.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
   "/css/app/2.1/dropzone.css": "/css/app/2.1/dropzone.css",
   "/css/app.css": "/css/app.css",
   "/css/admin/admin.css": "/css/admin/admin.css",
-  "/js/admin/translate.js": "/js/admin/translate.js",
   "/js/vendor.js": "/js/vendor.js",
   "/js/city.js": "/js/city.js",
   "/js/conference/speakers.js": "/js/conference/speakers.js",
