--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -13,6 +13,7 @@
   "/js/admin/keywords.js": "/js/admin/keywords.js",
   "/js/network.js": "/js/network.js",
   "/js/app.js": "/js/app.js",
+  "/js/first-visit.js": "/js/first-visit.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
