--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "babel-runtime": "~6.2.0",
     "bootstrap": "4.0.0-alpha.6",
     "jquery": "^3.1.0",
-    "laravel-echo": "^1.3.2",
     "laravel-mix": "^0.10.0",
     "lodash": "^4.16.2",
     "mojs-curve-editor": "^1.5.0",
@@ -38,11 +37,13 @@
     "font-awesome": "^4.7.0",
     "gsap": "^1.20.3",
     "ioredis": "^3.1.4",
+    "laravel-echo": "^1.3.2",
     "mo-js": "*",
     "redis": "^2.8.0",
     "scrollreveal": "^3.3.6",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
+    "tooltip.js": "^1.1.7",
     "video.js": "^6.2.6",
     "vjs-video": "*",
     "vue": "^2.4.4",
