--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
   "/js/app/intercut-crosscutting.js": "/js/app/intercut-crosscutting.js",
   "/js/socket-test.js": "/js/socket-test.js",
   "/js/teacher-chat.js": "/js/teacher-chat.js",
+  "/js/app.js": "/js/app.js",
   "/js/network-single.js": "/js/network-single.js",
   "/js/admin/translate.js": "/js/admin/translate.js",
   "/js/admin/video.js": "/js/admin/video.js",
@@ -12,8 +13,8 @@
   "/js/app/studio-home.js": "/js/app/studio-home.js",
   "/js/admin/keywords.js": "/js/admin/keywords.js",
   "/js/network.js": "/js/network.js",
-  "/js/app.js": "/js/app.js",
   "/js/first-visit.js": "/js/first-visit.js",
+  "/js/timeline.js": "/js/timeline.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
