--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-preset-stage-0": "~6.1.0",
     "babel-runtime": "~6.2.0",
     "bootstrap": "4.0.0-alpha.6",
+    "eslint": "^4.12.0",
+    "eslint-plugin-vue": "^4.0.0-beta.0",
     "jquery": "^3.1.0",
     "laravel-mix": "^0.10.0",
     "lodash": "^4.16.2",
