--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "babel-preset-stage-0": "~6.1.0",
     "babel-runtime": "~6.2.0",
     "bootstrap": "4.0.0-alpha.6",
-    "eslint": "^4.12.0",
-    "eslint-plugin-vue": "^4.0.0-beta.0",
+    "eslint": "^4.12.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-vue": "git://github.com/vuejs/eslint-plugin-vue.git",
     "jquery": "^3.1.0",
     "laravel-mix": "^0.10.0",
     "lodash": "^4.16.2",
