--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -24,6 +24,7 @@
   "/js/vendor.js": "/js/vendor.js",
   "/js/city.js": "/js/city.js",
   "/js/conference/speakers.js": "/js/conference/speakers.js",
+  "/js/teacher-profile.js": "/js/teacher-profile.js",
   "/js/manifest.js": "/js/manifest.js",
   "/js/admin/admin.min.js": "/js/admin/admin.min.js"
 }
