New notifications system with web sockets and vue for realtime feedbacks - Animation completed - Interactions completed

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -16,6 +16,7 @@
   "/js/first-visit.js": "/js/first-visit.js",
   "/js/network.js": "/js/network.js",
   "/js/timeline.js": "/js/timeline.js",
+  "/js/notifications.js": "/js/notifications.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
