--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-runtime": "~6.1.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "~6.1.0",
     "babel-preset-react": "~6.1.0",
     "babel-preset-stage-0": "~6.1.0",
     "babel-runtime": "~6.2.0",
     "bootstrap": "4.0.0-alpha.6",
-    "eslint": "^4.12.1",
+    "eslint": "^4.13.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-vue": "git://github.com/vuejs/eslint-plugin-vue.git",
     "jquery": "^3.1.0",
@@ -28,29 +28,32 @@
     "lodash": "^4.16.2",
     "mojs-curve-editor": "^1.5.0",
     "mojs-player": "^0.43.16",
-    "tether": "^1.4.0",
-    "webpack-dev-server": "^2.7.1"
+    "tether": "^1.4.3",
+    "vue-loader": "^13.5.0",
+    "vue-template-compiler": "^2.5.9",
+    "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
-    "angular": "^1.6.6",
+    "angular": "^1.6.7",
     "angular-media-timeline": "*",
     "any-resize-event": "^1.0.0",
     "dropzone": "^5.1.1",
     "express": "^4.16.2",
-    "fabric": "^2.0.0-beta0",
+    "fabric": "^2.0.0-rc.3",
     "font-awesome": "^4.7.0",
     "gsap": "^1.20.3",
-    "ioredis": "^3.1.4",
+    "ioredis": "^3.2.2",
     "iscroll": "^5.2.0",
     "laravel-echo": "^1.3.2",
     "mo-js": "*",
     "redis": "^2.8.0",
     "scrollreveal": "^3.3.6",
-    "socket.io": "^2.0.3",
-    "socket.io-client": "^2.0.3",
-    "video.js": "^6.2.6",
-    "vjs-video": "*",
-    "vue": "^2.4.4",
-    "vue-socket.io": "^2.1.1-a"
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
+    "video.js": "^6.5.1",
+    "vjs-video": "^0.1.11",
+    "vue": "^2.5.9",
+    "vue-socket.io": "^2.1.1",
+    "vueify": "^9.4.1"
   }
 }
