--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -17,6 +17,7 @@
   "/js/first-visit.js": "/js/first-visit.js",
   "/js/network.js": "/js/network.js",
   "/js/timeline.js": "/js/timeline.js",
+  "/js/feedback-toolbar.js": "/js/feedback-toolbar.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
