--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,11 +7,12 @@
   "/js/teacher-chat.js": "/js/teacher-chat.js",
   "/js/app.js": "/js/app.js",
   "/js/network-single.js": "/js/network-single.js",
-  "/js/admin/translate.js": "/js/admin/translate.js",
   "/js/admin/video.js": "/js/admin/video.js",
   "/js/admin/image.js": "/js/admin/image.js",
   "/js/admin/audio.js": "/js/admin/audio.js",
+  "/js/admin/translate.js": "/js/admin/translate.js",
   "/js/admin/main.js": "/js/admin/main.js",
+  "/js/admin/captions.js": "/js/admin/captions.js",
   "/js/admin/footer.js": "/js/admin/footer.js",
   "/js/app/studio-home.js": "/js/app/studio-home.js",
   "/js/admin/keywords.js": "/js/admin/keywords.js",
