--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -27,6 +27,7 @@
   "/css/app.css": "/css/app.css",
   "/css/admin/admin.css": "/css/admin/admin.css",
   "/js/vendor.js": "/js/vendor.js",
+  "/js/scroll.js": "/js/scroll.js",
   "/js/city.js": "/js/city.js",
   "/js/conference/speakers.js": "/js/conference/speakers.js",
   "/js/manifest.js": "/js/manifest.js",
