Add new panel for create/edit and delete teachers from admin panel

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -26,6 +26,7 @@
   "/css/app/2.1/dropzone.css": "/css/app/2.1/dropzone.css",
   "/css/app.css": "/css/app.css",
   "/css/admin/admin.css": "/css/admin/admin.css",
+  "/js/admin/teachers.js": "/js/admin/teachers.js",
   "/js/vendor.js": "/js/vendor.js",
   "/js/scroll.js": "/js/scroll.js",
   "/js/city.js": "/js/city.js",
