--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "laravel-echo": "^1.3.2",
     "mo-js": "*",
     "redis": "^2.8.0",
+    "scrollmonitor": "^1.2.4",
     "scrollreveal": "^3.3.6",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
