Installed vue-video-player

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "vue": "^2.5.9",
     "vue-draggable-resizable": "^1.6.1",
     "vue-socket.io": "^2.1.1",
+    "vue-video-player": "^5.0.1",
     "vueify": "^9.4.1"
   }
 }
