--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -28,8 +28,8 @@
   "/css/app/2.1/dropzone.css": "/css/app/2.1/dropzone.css",
   "/css/app.css": "/css/app.css",
   "/css/admin/admin.css": "/css/admin/admin.css",
+  "/js/upload.js": "/js/upload.js",
   "/js/vendor.js": "/js/vendor.js",
-  "/js/scroll.js": "/js/scroll.js",
   "/js/city.js": "/js/city.js",
   "/js/conference/speakers.js": "/js/conference/speakers.js",
   "/js/manifest.js": "/js/manifest.js",
