--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -23,6 +23,7 @@
   "/js/first-visit.js": "/js/first-visit.js",
   "/js/network.js": "/js/network.js",
   "/js/upload.js": "/js/upload.js",
+  "/js/message.js": "/js/message.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
   "/css/app/2.1/timeline.css": "/css/app/2.1/timeline.css",
