Imported to a fresh installation of laravel 5.6

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,13 @@
 /node_modules
-/svg_projects
-/svg_dev
-/vendor
-/.idea
-/resources/assets/working
-/resources/assets/copy_bootstrap
-/storage/*.key
 /public/hot
 /public/storage
-public/img/cover-1.jpg
+/storage/*.key
+/vendor
+/.idea
+/.vscode
+/.vagrant
 Homestead.json
 Homestead.yaml
-.env
 npm-debug.log
-
-
-*.DS_Store
-www.simonepozzobon.dev.crt
-www.simonepozzobon.dev.key
-
-.bash_profile
-
-laravel-echo-server.json
-
-
-# Ignore sketch files
-*.sketch
-
-# Ignore Eslint Config
-.eslintrc.json
+yarn-error.log
+.env
