--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "iscroll": "^5.2.0",
     "laravel-echo": "^1.3.2",
     "mo-js": "*",
+    "moment": "^2.22.1",
     "redis": "^2.8.0",
     "scrollmonitor": "^1.2.4",
     "scrollreveal": "^3.3.6",
