--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "predis/predis": "^1.1",
         "rairlie/laravel-locking-session": "^1.1",
         "spatie/laravel-activitylog": "*",
+        "spatie/laravel-analytics": "^3.6",
         "teamtnt/laravel-scout-tntsearch-driver": "^3.0",
         "teamtnt/tntsearch": "^1.0"
     },
