--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.16.2",
     "fabric": "^2.0.0-rc.3",
     "font-awesome": "^4.7.0",
+    "google-charts": "^1.1.0",
     "gsap": "^1.20.3",
     "ioredis": "^3.2.2",
     "iscroll": "^5.2.0",
