Add loader for the apps

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,12 +2,11 @@
   "/js/admin/main.js": "/js/admin/main.js",
   "/js/admin/contest.js": "/js/admin/contest.js",
   "/js/teacher-profile.js": "/js/teacher-profile.js",
+  "/js/notifications.js": "/js/notifications.js",
   "/js/app/sound-studio.js": "/js/app/sound-studio.js",
   "/js/app/intercut-crosscutting.js": "/js/app/intercut-crosscutting.js",
-  "/js/notifications.js": "/js/notifications.js",
   "/js/socket-test.js": "/js/socket-test.js",
   "/js/teacher-chat.js": "/js/teacher-chat.js",
-  "/js/app.js": "/js/app.js",
   "/js/network-single.js": "/js/network-single.js",
   "/js/admin/video.js": "/js/admin/video.js",
   "/js/admin/image.js": "/js/admin/image.js",
@@ -21,9 +20,11 @@
   "/js/app/studio-home.js": "/js/app/studio-home.js",
   "/js/admin/keywords.js": "/js/admin/keywords.js",
   "/js/feedback-toolbar.js": "/js/feedback-toolbar.js",
-  "/js/first-visit.js": "/js/first-visit.js",
   "/js/network.js": "/js/network.js",
   "/js/upload.js": "/js/upload.js",
+  "/js/first-visit.js": "/js/first-visit.js",
+  "/js/app.js": "/js/app.js",
+  "/js/loader.js": "/js/loader.js",
   "/js/message.js": "/js/message.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
   "/css/app/2.1/timeline-main.css": "/css/app/2.1/timeline-main.css",
