Aggiunge tracker al sistema di configurazione dell'environment

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+ANALYTICS_VIEW_ID=141950106
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -12,6 +13,13 @@ DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+
+DB_TRACKER_CONNECTION=mysql
+DB_TRACKER_HOST=127.0.0.1
+DB_TRACKER_PORT=3306
+DB_TRACKER_DATABASE=homestead_tracker
+DB_TRACKER_USERNAME=homestead
+DB_TRACKER_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
