--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "~4.0",
         "intervention/image": "^2.3",
         "laravel/framework": "5.6.*",
+        "laravel/passport": "^7.0",
         "laravel/scout": "^3.0",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^2.1",
