--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "barryvdh/laravel-cors": "^0.11.2",
         "dimsav/laravel-translatable": "^9.0",
         "doctrine/dbal": "^2.5",
         "egeloen/google-map": "^2.0",
