--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,8 +2,9 @@
   "/js/admin/main.js": "/js/admin/main.js",
   "/js/admin/contest.js": "/js/admin/contest.js",
   "/js/teacher-profile.js": "/js/teacher-profile.js",
-  "/js/notifications.js": "/js/notifications.js",
   "/js/timeline.js": "/js/timeline.js",
+  "/js/timelineaudio.js": "/js/timelineaudio.js",
+  "/js/notifications.js": "/js/notifications.js",
   "/js/app/sound-studio.js": "/js/app/sound-studio.js",
   "/js/app/intercut-crosscutting.js": "/js/app/intercut-crosscutting.js",
   "/js/socket-test.js": "/js/socket-test.js",
