--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -25,6 +25,7 @@
   "/js/upload.js": "/js/upload.js",
   "/js/first-visit.js": "/js/first-visit.js",
   "/js/app.js": "/js/app.js",
+  "/js/soundscapes.js": "/js/soundscapes.js",
   "/js/loader.js": "/js/loader.js",
   "/js/message.js": "/js/message.js",
   "/js/admin/admin.js": "/js/admin/admin.js",
