--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "production": "node node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "@sentry/browser": "^4.6.6",
     "axios": "^0.16.2",
     "babel": "~6.1.0",
     "babel-cli": "^6.26.0",
