--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-plugin-transform-runtime": "~6.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "~6.1.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "~6.1.0",
     "babel-preset-stage-0": "~6.1.0",
     "babel-runtime": "~6.2.0",
@@ -25,7 +25,7 @@
     "eslint-plugin-vue": "git://github.com/vuejs/eslint-plugin-vue.git",
     "jquery": "^3.3.1",
     "laravel-mix": "^0.10.0",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "mojs-curve-editor": "^1.5.0",
     "mojs-player": "^0.43.16",
     "tether": "^1.4.4",
