--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-  "/js/home.js": "/js/home.js",
-  "/css/app.css": "/css/app.css",
-  "/css/admin/admin.css": "/css/admin/admin.css",
-  "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js",
+    "/js/home.js": "/js/home.js",
+    "/css/app.css": "/css/app.css",
+    "/css/admin/admin.css": "/css/admin/admin.css"
 }
