--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "vue": "^2.6.6",
     "vue-loader": "<15.0.0",
     "vue-router": "^3.0.2",
-    "vue-slider-component": "^2.8.6",
     "vue-socket.io": "^3.0.7",
     "vue-template-compiler": "^2.5.16",
     "wavesurfer.js": "^2.1.3",
@@ -39,6 +38,7 @@
   },
   "dependencies": {
     "any-resize-event": "^1.0.0",
+    "bootstrap-vue": "^2.0.0-rc.20",
     "font-awesome": "^4.7.0",
     "google-charts": "^1.1.0",
     "gsap": "^2.0.1",
@@ -51,6 +51,7 @@
     "video.js": "^6.10.1",
     "vjs-video": "^0.1.11",
     "vue-draggable-resizable": "^1.7.1",
+    "vue-slider-component": "^3.0.31",
     "vue-spinner": "^1.0.3",
     "vue-video-player": "^5.0.2"
   }
