--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "scrollmonitor": "^1.2.4",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
+    "text-clipper": "^1.2.3",
     "video.js": "^6.10.1",
     "vjs-video": "^0.1.11",
     "vue-draggable-resizable": "^1.7.1",
