--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "webpack-dev-server": "^2.11.2"
   },
   "dependencies": {
+    "@sentry/integrations": "^5.4.1",
     "any-resize-event": "^1.0.0",
     "bootstrap-vue": "^2.0.0-rc.20",
     "font-awesome": "^4.7.0",
     "google-charts": "^1.1.0",
     "gsap": "^2.0.1",
+    "izitoast": "^1.4.0",
     "laravel-echo": "^1.3.5",
     "moment": "^2.22.1",
     "pannellum": "github:simonepozzobon/pannellum#814cd84",
@@ -57,6 +59,7 @@
     "video.js": "^6.10.1",
     "vjs-video": "^0.1.11",
     "vue-draggable-resizable": "^1.7.1",
+    "vue-notifications": "^1.0.0",
     "vue-slider-component": "^3.0.31",
     "vue-spinner": "^1.0.3",
     "vue-video-player": "^5.0.2"
