--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-beautify": "^1.10.0",
     "jsdom": "^13.2.0",
     "laravel-mix": "^4.0.15",
+    "laravel-mix-polyfill": "^1.0.2",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
