--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "sass-loader": "7.*",
         "tether": "^1.4.4",
         "vue": "^2.6.6",
+        "vue-awesome-swiper": "^3.1.3",
         "vue-loader": "<15.0.0",
         "vue-router": "^3.0.2",
         "vue-socket.io": "^3.0.7",
