--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "vue-router": "^3.0.2",
         "vue-socket.io": "^3.0.7",
         "vue-template-compiler": "^2.5.16",
+        "vuejs-clipper": "^1.1.4",
         "wavesurfer.js": "^2.1.3",
         "webpack-dev-server": "^2.11.2"
     },
