--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
         "format:html": "node bin/glob-ls.js 'src/**/*.html' 'build/**/*.html.ejs' | xargs node_modules/.bin/html-beautify -r"
     },
     "devDependencies": {
-        "@babel/cli": "^7.4.4",
-        "@babel/core": "^7.4.4",
-        "@babel/preset-env": "^7.4.4",
+        "@babel/cli": "^7.5.5",
+        "@babel/core": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
         "@sentry/browser": "^4.6.6",
         "axios": "^0.18.1",
         "babel-loader": "^8.0.5",
@@ -35,6 +35,7 @@
         "laravel-mix": "^4.0.15",
         "laravel-mix-polyfill": "^1.0.2",
         "lodash": "^4.17.15",
+        "mime-types": "^2.1.24",
         "node-sass": "^4.12.0",
         "popper.js": "^1.15.0",
         "prettier": "^1.17.1",
@@ -42,6 +43,8 @@
         "sass": "^1.20.1",
         "sass-loader": "7.*",
         "tether": "^1.4.4",
+        "tiptap": "^1.24.0",
+        "tiptap-extensions": "^1.26.0",
         "vue": "^2.6.6",
         "vue-awesome-swiper": "^3.1.3",
         "vue-loader": "<15.0.0",
