--- a/package.json
+++ b/package.json
@@ -67,14 +67,17 @@
         "moment": "^2.22.1",
         "pannellum": "github:simonepozzobon/pannellum#814cd84",
         "scrollmonitor": "^1.2.4",
+        "select2": "^4.0.11",
         "socket.io": "^2.1.1",
         "socket.io-client": "^2.1.1",
         "striptags": "^3.1.1",
         "text-clipper": "^1.2.3",
+        "v-select2-component": "^0.4.1",
         "video.js": "^6.10.1",
         "vjs-video": "^0.1.11",
         "vue-draggable-resizable": "^1.7.1",
         "vue-notifications": "^1.0.0",
+        "vue-select2": "^0.2.6",
         "vue-slider-component": "^3.0.31",
         "vue-spinner": "^1.0.3",
         "vue-video-player": "^5.0.2"
