--- a/package.json
+++ b/package.json
@@ -59,9 +59,10 @@
         "@sentry/integrations": "^5.4.1",
         "any-resize-event": "^1.0.0",
         "bootstrap-vue": "^2.0.0-rc.20",
+        "element-resize-event": "^3.0.3",
         "font-awesome": "^4.7.0",
         "google-charts": "^1.1.0",
-        "gsap": "^2.1.3",
+        "gsap": "file:../Downloads/greensock-js-shockingly-green 2/gsap-3-beta/npm-install-this/gsap-bonus.tgz",
         "izitoast": "^1.4.0",
         "laravel-echo": "^1.3.5",
         "moment": "^2.22.1",
