--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "gsap": "file:../Downloads/greensock-js-shockingly-green 2/gsap-3-beta/npm-install-this/gsap-bonus.tgz",
         "izitoast": "^1.4.0",
         "laravel-echo": "^1.3.5",
+        "lodash.debounce": "^4.0.8",
         "moment": "^2.22.1",
         "pannellum": "github:simonepozzobon/pannellum#814cd84",
         "scrollmonitor": "^1.2.4",
