--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
         "izitoast": "^1.4.0",
         "laravel-echo": "^1.3.5",
         "lodash.debounce": "^4.0.8",
+        "lodash.isequal": "^4.5.0",
+        "lodash.throttle": "^4.1.1",
         "moment": "^2.22.1",
         "pannellum": "github:simonepozzobon/pannellum#814cd84",
         "scrollmonitor": "^1.2.4",
@@ -82,6 +84,7 @@
         "vue-select2": "^0.2.6",
         "vue-slider-component": "^3.0.31",
         "vue-spinner": "^1.0.3",
-        "vue-video-player": "^5.0.2"
+        "vue-video-player": "^5.0.2",
+        "vue2-dropzone": "^3.6.0"
     }
 }
