--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "tether": "^1.4.4",
         "tiptap": "^1.24.0",
         "tiptap-extensions": "^1.26.0",
+        "toastr": "^2.1.4",
         "vue": "^2.6.6",
         "vue-awesome-swiper": "^3.1.3",
         "vue-loader": "<15.0.0",
