--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
         "select2": "^4.0.11",
         "socket.io": "^2.1.1",
         "socket.io-client": "^2.1.1",
-        "stickybits": "^3.7.1",
+        "stickybits": "^3.6.8",
         "striptags": "^3.1.1",
         "text-clipper": "^1.2.3",
         "v-select2-component": "^0.4.1",
@@ -87,6 +87,7 @@
         "vue-select2": "^0.2.6",
         "vue-slider-component": "^3.0.31",
         "vue-spinner": "^1.0.3",
+        "vue-sticky-directive": "0.0.10",
         "vue-video-player": "^5.0.2",
         "vue2-dropzone": "^3.6.0"
     }
