--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
         "fabric": "^3.6.3",
         "font-awesome": "^4.7.0",
         "google-charts": "^1.1.0",
-        "gsap": "file:../Downloads/gsap-shockingly-green 2/npm-install-this/gsap-bonus.tgz",
+        "gsap": "npm:@gsap/shockingly@^3.6.0",
         "izitoast": "^1.4.0",
         "laravel-echo": "^1.3.5",
         "lodash.debounce": "^4.0.8",
